--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.1.96",
+    "@vueuse/components": "^9.9.0",
+    "@vueuse/core": "^9.9.0",
+    "@vueuse/nuxt": "^9.9.0",
     "axios": "^1.2.2",
     "gh-pages": "^4.0.0",
     "nuxt": "3.0.0",
