--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.1.96",
+    "@monaco-editor/loader": "^1.3.2",
     "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.9.0",
     "@vueuse/nuxt": "^9.9.0",
     "axios": "^1.2.2",
+    "emmet-monaco-es": "^5.1.2",
     "gh-pages": "^4.0.0",
+    "monaco-editor": "0.34.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "nuxt": "3.0.0",
     "vuetify": "^3.0.6"
   }
