--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^9.9.0",
     "@vueuse/nuxt": "^9.9.0",
     "axios": "^1.2.2",
+    "dayjs": "^1.11.7",
     "emmet-monaco-es": "^5.1.2",
     "gh-pages": "^4.0.0",
     "monaco-editor": "0.34.1",
