--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@monaco-editor/loader": "^1.3.2",
     "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.9.0",
+    "@vueuse/integrations": "^9.9.0",
     "@vueuse/nuxt": "^9.9.0",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
