--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "emmet-monaco-es": "^5.1.2",
+    "fs-extra": "^11.1.0",
     "gh-pages": "^4.0.0",
     "monaco-editor": "0.34.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
