--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "monaco-editor": "0.34.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "nuxt": "3.0.0",
+    "three": "^0.148.0",
     "vuetify": "^3.0.6"
   }
 }
