--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "@enable3d/ammo-physics": "^0.25.3",
     "@mdi/font": "^7.1.96",
     "@monaco-editor/loader": "^1.3.2",
     "@vueuse/components": "^9.9.0",
@@ -18,8 +19,10 @@
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "emmet-monaco-es": "^5.1.2",
+    "enable3d": "^0.25.3",
     "fs-extra": "^11.1.0",
     "gh-pages": "^4.0.0",
+    "matter-js": "^0.18.0",
     "monaco-editor": "0.34.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "nuxt": "3.0.0",
