--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "@babylonjs/core": "^5.41.0",
+    "@babylonjs/inspector": "^5.41.0",
+    "@babylonjs/loaders": "^5.41.0",
     "@enable3d/ammo-physics": "^0.25.3",
     "@mdi/font": "^7.1.96",
     "@monaco-editor/loader": "^1.3.2",
@@ -17,6 +20,7 @@
     "@vueuse/integrations": "^9.9.0",
     "@vueuse/nuxt": "^9.9.0",
     "axios": "^1.2.2",
+    "cannon-es": "^0.20.0",
     "dayjs": "^1.11.7",
     "emmet-monaco-es": "^5.1.2",
     "enable3d": "^0.25.3",
