--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enable3d": "^0.25.3",
     "fs-extra": "^11.1.0",
     "gh-pages": "^4.0.0",
+    "lodash": "^4.17.21",
     "matter-js": "^0.18.0",
     "monaco-editor": "0.34.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
