--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@enable3d/ammo-physics": "^0.25.3",
     "@mdi/font": "^7.1.96",
     "@monaco-editor/loader": "^1.3.2",
+    "@nuxt/content": "^2.4.1",
     "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.9.0",
     "@vueuse/integrations": "^9.9.0",
