--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@enable3d/ammo-physics": "^0.25.3",
+    "@faker-js/faker": "^7.6.0",
     "@mdi/font": "^7.1.96",
     "@monaco-editor/loader": "^1.3.2",
     "@nuxt/content": "^2.4.1",
