--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/font": "^7.1.96",
     "@monaco-editor/loader": "^1.3.2",
     "@nuxt/content": "^2.4.1",
+    "@vue-leaflet/vue-leaflet": "^0.8.0",
     "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.9.0",
     "@vueuse/integrations": "^9.9.0",
@@ -26,6 +27,7 @@
     "enable3d": "^0.25.3",
     "fs-extra": "^11.1.0",
     "gh-pages": "^4.0.0",
+    "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "matter-js": "^0.18.0",
     "monaco-editor": "0.34.1",
