--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.2.2",
     "brain.js": "^2.0.0-beta.18",
     "cannon-es": "^0.20.0",
+    "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
     "emmet-monaco-es": "^5.1.2",
     "enable3d": "^0.25.3",
