--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/font": "^7.1.96",
     "@monaco-editor/loader": "^1.3.2",
     "@nuxt/content": "^2.4.1",
+    "@tensorflow/tfjs": "^4.2.0",
     "@vue-leaflet/vue-leaflet": "^0.8.0",
     "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.9.0",
