--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "monaco-editor": "0.34.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "mousetrap": "^1.6.5",
-    "nuxt": "3.3.2",
+    "nuxt": "3.6.5",
     "three": "^0.148.0",
-    "vuetify": "^3.3.6"
+    "vuedraggable": "^4.1.0",
+    "vuetify": "^3.3.11"
   }
 }
