--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@enable3d/ammo-physics": "^0.25.3",
     "@faker-js/faker": "^7.6.0",
+    "@iconify/vue": "^4.1.1",
     "@mdi/font": "^7.1.96",
     "@monaco-editor/loader": "^1.3.2",
     "@nuxt/content": "^2.4.1",
@@ -20,6 +21,7 @@
     "@vueuse/core": "^9.9.0",
     "@vueuse/integrations": "^9.9.0",
     "@vueuse/nuxt": "^9.9.0",
+    "add": "^2.0.6",
     "axios": "^1.2.2",
     "brain.js": "^2.0.0-beta.18",
     "cannon-es": "^0.20.0",
@@ -32,12 +34,14 @@
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "matter-js": "^0.18.0",
+    "mermaid": "^10.3.0",
     "monaco-editor": "0.34.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "mousetrap": "^1.6.5",
     "nuxt": "3.6.5",
     "three": "^0.148.0",
     "vuedraggable": "^4.1.0",
-    "vuetify": "^3.3.11"
+    "vuetify": "^3.3.11",
+    "yarn": "^1.22.19"
   }
 }
