--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@monaco-editor/loader": "^1.3.2",
     "@nuxt/content": "^2.4.1",
     "@tensorflow/tfjs": "^4.2.0",
-    "@vue-leaflet/vue-leaflet": "^0.8.0",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.9.0",
     "@vueuse/integrations": "^9.9.0",
@@ -31,7 +31,8 @@
     "enable3d": "^0.25.3",
     "fs-extra": "^11.1.0",
     "gh-pages": "^4.0.0",
-    "leaflet": "^1.9.3",
+    "hotkeys-js": "^3.12.0",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "matter-js": "^0.18.0",
     "mermaid": "^10.3.0",
@@ -41,7 +42,7 @@
     "nuxt": "3.6.5",
     "three": "^0.148.0",
     "vuedraggable": "^4.1.0",
-    "vuetify": "^3.3.11",
+    "vuetify": "^3.3.12",
     "yarn": "^1.22.19"
   }
 }
