--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/font": "^7.1.96",
     "@monaco-editor/loader": "^1.3.2",
     "@nuxt/content": "^2.4.1",
+    "@nuxt/devtools": "^0.8.0",
     "@tensorflow/tfjs": "^4.2.0",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/components": "^9.9.0",
@@ -42,7 +43,7 @@
     "nuxt": "3.6.5",
     "three": "^0.148.0",
     "vuedraggable": "^4.1.0",
-    "vuetify": "^3.3.12",
+    "vuetify": "^3.3.14",
     "yarn": "^1.22.19"
   }
 }
