--- a/nuxt3/package.json
+++ b/nuxt3/package.json
@@ -33,6 +33,7 @@
     "monaco-editor": "^0.44.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "nuxt": "^3.8.2",
+    "sass": "^1.69.5",
     "three": "^0.159.0",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.10",
