--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Jeferson Silva <jeferson.i.silva@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "bash bin/dev"
+    "dev": "bash bin/dev",
+    "build": "bash bin/build"
   }
 }
